angular/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mean-crud-front
spec:
  selector:
    app: mean-crud-front
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
