angular/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mean-crud-front
spec:
  rules:
  - host: yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mean-crud-front
            port:
              name: http
